@@ -20,7 +20,6 @@ import uk.gov.hmcts.reform.ccd.client.model.SubmittedCallbackResponse;
 
 import java.util.List;
 
-import static java.util.stream.Collectors.toList;
 import static uk.gov.hmcts.divorce.bulkaction.ccd.BulkActionState.Created;
 import static uk.gov.hmcts.divorce.bulkaction.ccd.BulkActionState.Listed;
 import static uk.gov.hmcts.divorce.bulkaction.ccd.BulkActionState.Pronounced;
@@ -36,6 +35,8 @@ public class CaseworkerRemoveCasesFromBulkList implements CCDConfig<BulkActionCa
 
     public static final String CASEWORKER_REMOVE_CASES_BULK_LIST = "caseworker-remove-cases-bulk-list";
 
+    private static final String REMOVE_CASES_FROM_BULK_LIST = "Remove cases from bulk list";
+
     private final CaseRemovalService caseRemovalService;
 
     private final PronouncementListDocService pronouncementListDocService;
@@ -45,8 +46,8 @@ public class CaseworkerRemoveCasesFromBulkList implements CCDConfig<BulkActionCa
         new BulkActionPageBuilder(configBuilder
             .event(CASEWORKER_REMOVE_CASES_BULK_LIST)
             .forStates(Created, Listed, Pronounced)
-            .name("Remove cases from bulk list")
-            .description("Remove cases from bulk list")
+            .name(REMOVE_CASES_FROM_BULK_LIST)
+            .description(REMOVE_CASES_FROM_BULK_LIST)
             .showSummary()
             .aboutToStartCallback(this::aboutToStart)
             .aboutToSubmitCallback(this::aboutToSubmit)
@@ -55,7 +56,7 @@ public class CaseworkerRemoveCasesFromBulkList implements CCDConfig<BulkActionCa
             .explicitGrants()
             .grant(CREATE_READ_UPDATE, CASE_WORKER, SYSTEMUPDATE))
             .page("removeCasesFromBulkList", this::midEvent)
-            .pageLabel("Remove cases from bulk list")
+            .pageLabel(REMOVE_CASES_FROM_BULK_LIST)
             .mandatoryNoSummary(BulkActionCaseData::getCasesAcceptedToListForHearing);
     }
 
@@ -112,12 +113,12 @@ public class CaseworkerRemoveCasesFromBulkList implements CCDConfig<BulkActionCa
         List<ListValue<BulkListCaseDetails>> casesToRemove =
             bulkActionCaseData.getBulkListCaseDetails().stream()
                 .filter(c -> !casesAcceptedToListForHearing.contains(c.getValue().getCaseReference().getCaseReference()))
-                .collect(toList());
+                .toList();
 
         bulkActionCaseData.setBulkListCaseDetails(
             bulkActionCaseData.getBulkListCaseDetails().stream()
                 .filter(lv -> !casesToRemove.contains(lv))
-                .collect(toList()));
+                .toList());
         bulkActionCaseData.setCasesToBeRemoved(casesToRemove);
 
         if (bulkActionCaseData.getPronouncementListDocument() != null) {
